# Circuit-Simulator

./: .gitignore  CMakeLists.txt
src/: Instrument.hpp  main.cpp
src/core/: Circuit.cpp  Circuit.hpp  Component.hpp  Node.hpp
src/core/components/: CurrentSource.hpp  Resistor.hpp  VoltageSource.hpp
tests/: test_current_source.cpp  test_resistor.cpp  test_voltage_source.cpp
